jvm:stone_fir:week8,9,10,11